# Haven

./: .gitmodules  PRIVACY_POLICY.md  README.md  RELEASE.md  ROADMAP.md  VISION.md  default.nix  flake.nix  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/xml/: file_paths.xml  locales_config.xml
build-proot/: build.sh
build-proot/build-arm64-v8a/talloc-2.4.2/: config.h
build-proot/build-x86_64/talloc-2.4.2/lib/replace/: replace.h
core/data/schemas/sh.haven.core.data.db.HavenDatabase/: 12.json  20.json  26.json  27.json  6.json  8.json  9.json
core/local/: build.gradle.kts
core/local/src/main/cpp/: CMakeLists.txt  pty_bridge.c
core/rdp/: build.gradle.kts
core/vnc/: build.gradle.kts
fastlane/metadata/android/en-US/changelogs/: 1911.txt  1981.txt  1991.txt  2041.txt  2181.txt  24.txt  29.txt  49.txt  50.txt  59.txt  730.txt
feature/connections/: build.gradle.kts
feature/rdp/: build.gradle.kts
feature/settings/: build.gradle.kts
feature/terminal/: build.gradle.kts
feature/vnc/: build.gradle.kts
gradle/: libs.versions.toml
metadata/: sh.haven.app.yml
nix/: gradle-deps.json  haven-release.jks  haven.nix
rclone-android/: .gitignore
rclone-android/go/: rcbridge.go
rdp-kotlin/: .gitignore  build.gradle.kts  settings.gradle.kts
rdp-kotlin/kotlin/sh/haven/rdp/: RdpTransport.kt
rdp-kotlin/rust/: Cargo.toml  build.rs  rust-toolchain.toml  uniffi.toml
rdp-kotlin/rust/src/: lib.rs
rdp-kotlin/tools/: build-android.sh
(+127 files in other folders)
